--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "start:intranet": "cross-env NODE_ENV=production node server.js",
+    "start:intranet-win": "set NODE_ENV=production && node server.js",
     "dev": "nodemon server.js",
+    "dev:intranet": "nodemon server.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:leave-system": "node comprehensive-leave-management-test.js",
@@ -36,6 +39,7 @@
     "colors": "^1.4.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
