--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,4 @@
-VITE_API_BASE_URL=http://localhost:3000/api
+# Frontend Environment Configuration for Intranet
+VITE_API_BASE_URL=http://10.0.0.73:3000/api
+VITE_APP_NAME=Employee Management System
+VITE_APP_VERSION=1.0.0
