--- a/backend/package.json
+++ b/backend/package.json
@@ -9,21 +9,13 @@
     "start:intranet-win": "set NODE_ENV=production && node server.js",
     "dev": "nodemon server.js",
     "dev:intranet": "nodemon server.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:payroll": "jest tests/payrollSystem.test.js",
-    "test:benefits": "jest tests/compensationBenefits.test.js",
-    "test:integration": "jest tests/systemIntegration.test.js",
-    "test:restructure": "jest tests/payrollSystem.test.js tests/compensationBenefits.test.js tests/systemIntegration.test.js",
-    "validate:migration": "node scripts/validate-migration.js",
-    "verify:tables": "node scripts/verify-restructure-tables.js",
-    "apply:restructure": "node scripts/apply-payroll-restructure.js",
-    "test:payroll-cb-live": "node scripts/live-payroll-cb-test.js",
-    "test:payroll-cb-quick": "node scripts/quick-payroll-cb-test.js",
-    "test:intranet": "node scripts/run-intranet-tests.js",
-    "setup:test-user": "node scripts/setup-test-user.js",
     "setup": "node scripts/setup.js",
-    "seed": "node scripts/seed.js"
+    "seed": "node scripts/seed.js",
+    "test:cors": "node scripts/test-cors.js",
+    "kill:port": "npx kill-port 3000",
+    "restart": "npm run kill:port && npm run dev",
+    "health": "curl -s http://10.0.0.73:3000/health | node -p \"JSON.stringify(JSON.parse(require('fs').readFileSync(0)), null, 2)\"",
+    "debug:cors": "echo Testing CORS... && npm run test:cors"
   },
   "keywords": [
     "employee-management",
