--- a/backend/.env.example
+++ b/backend/.env.example
@@ -30,3 +30,10 @@ LOCKOUT_TIME=900000
 # Rate Limiting
 RATE_LIMIT_WINDOW=900000
 RATE_LIMIT_MAX=100
+
+# Backup Configuration
+BACKUP_ENABLED=true
+BACKUP_PATH=./backups
+BACKUP_RETENTION=30
+MYSQLDUMP_PATH=mysqldump
+MYSQL_PATH=mysql
