--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,22 +5,22 @@ PORT=3000
 # Database Configuration
 DB_HOST=localhost
 DB_PORT=3306
-DB_NAME=employee_management_system
+DB_NAME=lgu_portal
 DB_USER=root
-DB_PASSWORD=3Quetras
+DB_PASSWORD=YouPassword
 
 # Session Configuration
-SESSION_SECRET=your_super_secret_session_key_change_this_in_production
-SESSION_NAME=ems_session
+SESSION_SECRET=change-ninyo-eto-kung-gusto-nyu-for-safety
+SESSION_NAME=lgu_session
 
 # File Upload Configuration
 UPLOAD_PATH=./uploads
 MAX_FILE_SIZE=5242880
 
 # Application Configuration
-APP_NAME=Employee Management System
+APP_NAME=LGU Portal
 APP_VERSION=1.0.0
-COMPANY_NAME=Your Company Name
+COMPANY_NAME=Local Government Unit
 
 # Security Configuration
 BCRYPT_ROUNDS=12
